--- a/harrisoncarloss.com/contact/stoke/index.html
+++ b/harrisoncarloss.com/contact/stoke/index.html
@@ -559,8 +559,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="contactform">
 	<div class="maps">
 					<div class="map">
-				<div class="marker" data-lat="53.0268372" data-lng="-2.1941095">
-				</div>
+				<!-- <div class="marker" data-lat="53.0268372" data-lng="-2.1941095">
+				</div> -->
+                <iframe class="map_iframe " src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3563.405610088364!2d83.43099121504109!3d26.731429583206076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39915ca3e2aa136b%3A0xc039bdf0211338a9!2sMadan%20Mohan%20Malaviya%20University%20Of%20Technology!5e0!3m2!1sen!2sin!4v1598248811740!5m2!1sen!2sin" style="border: 0" allowfullscreen="" aria-hidden="false" tabindex="0"frameborder="0"></iframe> 
 			</div>
 			</div>
 	<div class="contact-right text-section">
